test/admin/language/english/company/comment.php
<?php
// heading title
$_['heading_title'] = 'Comment';

// text
$_['text_edit'] = 'Edit';
$_['text_enable'] = 'Enable';
$_['text_disable'] = 'Disable';
$_['text_company'] = 'Company';
$_['text_post'] = 'Post';

// button
$_['button_insert'] = 'Insert';
$_['button_delete'] = 'Delete';
$_['button_save'] = 'Save';
$_['button_cancel'] = 'Cancel';

// column
$_['column_author'] = 'Author';
$_['column_created'] = 'Created';
$_['column_status'] = 'Status';
$_['column_action'] = 'Action';

// entry
$_['entry_author'] = 'Author:';
$_['entry_content'] = 'Content:';
$_['entry_status'] = 'Status:';

// error
$_['error_warning'] = 'Warning: Error!';
$_['error_author'] = 'Warning: Error Author is required!';
$_['error_content'] = 'Warning: Error Comment\'s Content at least 1 characters!';
$_['success'] = 'Success: You have modified Comment!';
?>